Stop tables being cut off on medium breakpoint

--- a/scss/elements/_sections.scss
+++ b/scss/elements/_sections.scss
@@ -6,16 +6,13 @@
 	}
 
 	&__subtitle {
-
 		margin-top: $col;
 		margin-bottom: $baseline;
-
 	}
 
 	&__content {
 
 		&-number {
-
 			position: relative;
 			margin-left: ($col * -3);
 			//padding-left: 6px;
@@ -80,6 +77,11 @@
 				.markdown-table-wrap {
 					//Charts take up extra space when available (ie on desktop/tablet)
 					width: 700px;
+					
+					// Slightly smaller on medium so that table right column isn't cut off
+					@include breakpoint(md) {
+						width: 670px;
+					}
 
 					//On mobile then go 100% width
 					@include breakpoint(sm) {
